# SwitchStream

./: README.md  com.github.Aurnytoraink.SwitchStream.json  meson.build
data/: com.github.Aurnytoraink.SwitchStream.appdata.xml.in  com.github.Aurnytoraink.SwitchStream.desktop.in  com.github.Aurnytoraink.SwitchStream.gschema.xml  meson.build  switchstream.gresource.xml
data/icons/: meson.build
data/ui/: about.ui.in  meson.build  window.ui
po/: POTFILES  meson.build
src/: main.py  meson.build  switchstream.in  window.py
